==> viduraembedded/MSP432_SimpleLink_SDK/1.8inch_TFT_LCD/st7735.c <==
#include <stdint.h>
#include <stddef.h>
#include <unistd.h>
#include <stdlib.h>
#include "st7735.h"
#include "testimg.h"
#include <ti/drivers/GPIO.h>
#include <ti/drivers/SPI.h>
#include "ti_drivers_config.h"
#define TFT_CS_H()	GPIO_write(CONFIG_GPIO_CS_PIN, 1)
#define TFT_CS_L()	GPIO_write(CONFIG_GPIO_CS_PIN, 0)
#define TFT_DC_D()	GPIO_write(CONFIG_GPIO_DC_PIN, 1)
#define TFT_DC_C()	GPIO_write(CONFIG_GPIO_DC_PIN, 0)
#define TFT_RES_H()	GPIO_write(CONFIG_GPIO_RST_PIN, 1)
#define TFT_RES_L()	GPIO_write(CONFIG_GPIO_RST_PIN, 0)
#define ST7735_COLOR565(r, g, b) (((r & 0xF8) << 8) | ((g & 0xFC) << 3) | ((b & 0xF8) >> 3))
#define SWAP_INT16_T(a, b) { int16_t t = a; a = b; b = t; }
#define DELAY 0x80

static void ST7735_Reset()
{
	TFT_RES_L();
	usleep(20000);
	TFT_RES_H();
}

static void ST7735_WriteCommand(uint8_t cmd)
{
    TFT_DC_C();
#ifdef USE_SPI_DMA

#else
    bool spiTranferOK;

    lcdTransaction.count = sizeof(cmd);
    lcdTransaction.txBuf = &cmd;
    spiTranferOK = SPI_transfer(lcdHandle, &lcdTransaction);

    if (spiTranferOK == false) {
        // Error in SPI or transfer already in progress.
        while(1){}
    }
#endif
}

static void ST7735_WriteData(uint8_t* buff, size_t buff_size)
{
    TFT_DC_D();
#ifdef USE_SPI_DMA

#else
    bool spiTranferOK;

    lcdTransaction.count = buff_size;
    lcdTransaction.txBuf = buff;
    spiTranferOK = SPI_transfer(lcdHandle, &lcdTransaction);

    if (spiTranferOK == false) {
        // Error in SPI or transfer already in progress.
        while(1){}
    }
#endif
}

void ST7735_Init()
{
	ST7735_GPIO_Init();
	TFT_CS_L();
    ST7735_Reset();
    ST7735_ExecuteCommandList(init_cmds1);
    ST7735_ExecuteCommandList(init_cmds2);
    ST7735_ExecuteCommandList(init_cmds3);
    TFT_CS_H();
}
