==> artem56881/rp2040-qteloader/drivers/st7735.c <==
#include "st7735.h"

static void ST7735_Reset()
{
    gpio_put(PIN_LCD_RST, 0);
    sleep_ms(100);
    gpio_put(PIN_LCD_RST, 1);
    sleep_ms(100);
}

static void ST7735_WriteCommand(uint8_t cmd)
{
    gpio_put(PIN_LCD_CS, 0); // Активировать чип
    gpio_put(PIN_LCD_DC, 0); // Командный режим
    spi_write_blocking(spi_default, &cmd, 1);
    gpio_put(PIN_LCD_CS, 1); // Деактивировать чип
}

static void ST7735_WriteData(uint8_t *data, size_t buff_size)
{
    gpio_put(PIN_LCD_CS, 0); // Активировать чип
    gpio_put(PIN_LCD_DC, 1); // Режим данных
    spi_write_blocking(spi_default, data, buff_size);
    gpio_put(PIN_LCD_CS, 1); // Деактивировать чип
}

void ST7735_Init(void)
{
    ST7735_SPI_Init();

    gpio_put(PIN_LCD_CS, 0);

    ST7735_Reset();

    ST7735_ExecuteCommandList(init_cmds1);
    ST7735_ExecuteCommandList(init_cmds2);
    ST7735_ExecuteCommandList(init_cmds3);

    gpio_put(PIN_LCD_CS, 1);
}
